# spoon-BeVec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
bevec/: __init__.py  client.py
bevec/core/: base.py  exceptions.py  registry.py
bevec/providers/chroma/: __init__.py  adapter.py  config.py
bevec/providers/pinecone/: __init__.py  adapter.py  config.py
chroma/: chroma.sqlite3
tests/: conftest.py  test_base.py  test_client.py  test_registry.py  test_vector_clients.py
